--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <!-- Mermaid for diagrams -->
   <!-- <script src="/theme/js/mermaid.full.min.js" type="text/javascript"></script> -->
 
-  <!-- Analytics -->
+  <meta property="og:image" content="/theme/img/orangemind-square-brain.png"> <!-- orangeMindLogo.png -->
+  <meta property="og:description" content="Scifi comedy comics.">
+   <!-- Analytics -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
