--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@ var posts = [
 "school",
 "running",
 "high",
-"self-employed"
+"self-employed",
+"gifted"
 ];
 
 var pathname = window.location.pathname;
